--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -12,7 +12,7 @@
 </head>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Student Management System</a>
+  <a class="navbar-brand" href="#">User Management System</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -33,9 +33,9 @@
 <div class = "container">
   <div class = "row">
     <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-      <h1 class = "text-center"> Update Student </h1>
+      <h1 class = "text-center"> Update User </h1>
       <div class = "card-body">
-        <form th:action="@{/users/{id} (id=${user.id})}" th:object = "${user}" method="POST">
+        <form th:action="@{/users/edit/{id} (id=${user.id})}" th:object = "${user}" method="POST">
           <div class ="form-group">
             <label> User First Name </label>
             <input
