--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,11 @@
 <body>
 <h1>Welcome to Index PAGE!</h1>
 
+<div class="row">
+    <div class = "col-lg-3">
+        <a class="btn btn-primary" th:href="@{/users}" role="button">Enter the Table!</a>
+    </div>
+</div>
 
 </body>
 </html>
