--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -16,7 +16,7 @@
       <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-around card">
         <h1 class="text-center"> Create new user </h1>
         <div class="card-body">
-          <form th:action="@{/users}" th:object="${user}" method="post">
+          <form th:action="@{/admin}" th:object="${user}" method="post">
             <div class="form-group">
               <label> First Name </label>
               <input
