--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -8,57 +8,79 @@
         rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
         crossorigin="anonymous">
-    <title>New User</title>
+  <title>New User</title>
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-around card">
-        <h1 class="text-center"> Create new user </h1>
-        <div class="card-body">
-          <form th:action="@{/admin}" th:object="${user}" method="post">
-            <div class="form-group">
-              <label> First Name </label>
-              <input
-              type="text"
-              name="firstName"
-              class="form-control"
-              th:field="*{firstName}"
-              placeholder="Enter First Name"
-              />
-            </div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-around card">
+      <h1 class="text-center"> Create new user </h1>
+      <div class="card-body">
+        <form th:action="@{/admin}" th:object="${user}" method="post">
+          <div class="form-group">
+            <label> First Name </label>
+            <input
+                    type="text"
+                    name="firstName"
+                    class="form-control"
+                    th:field="*{firstName}"
+                    placeholder="Enter First Name"
+            />
+          </div>
 
-            <div class="form-group">
-              <label> Last Name </label>
-              <input
-                type="text"
-                name="lastName"
-                class="form-control"
-                th:field="*{lastName}"
-                placeholder="Enter Last Name"
-              />
-            </div>
+          <div class="form-group">
+            <label> Last Name </label>
+            <input
+                    type="text"
+                    name="lastName"
+                    class="form-control"
+                    th:field="*{lastName}"
+                    placeholder="Enter Last Name"
+            />
+          </div>
 
-            <div class="form-group">
-              <label> Email </label>
-              <input
-                type="text"
-                name="email"
-                class="form-control"
-                th:field="*{email}"
-                placeholder="Enter Email"
-              />
-            </div>
+          <div class="form-group">
+            <label> Age </label>
+            <input
+                    type="number"
+                    name="age"
+                    class="form-control"
+                    th:field="*{age}"
+                    placeholder="Enter Last Name"
+            />
+          </div>
 
-            <div class="box-footer">
-              <button type="submit" class="btn btn-primary">
-                Submit
-              </button>
-            </div>
-          </form>
-        </div>
+          <div class="form-group">
+            <label> Email </label>
+            <input
+                    type="email"
+                    name="email"
+                    class="form-control"
+                    th:field="*{email}"
+                    placeholder="Enter Email"
+            />
+          </div>
+
+          <div class="form-group">
+            <label> Password </label>
+            <input
+                    type="text"
+                    name="password"
+                    class="form-control"
+                    th:field="*{password}"
+                    placeholder="Enter Password"
+            />
+          </div>
+
+          <div class="box-footer">
+            <button type="submit" class="btn btn-primary">
+              Submit
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
+</div>
 </body>
 </html>
