--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,46 +11,48 @@
   <title>Users</title>
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <h1>User-table</h1>
-    </div>
-<!--    <div>-->
-<!--      <p>Logged user: <span th:text="${principal.getName()}"></span> </p>-->
-<!--    </div>-->
-    <div class="row">
-      <div class = "col-lg-3">
-        <a class="btn btn-primary" th:href="@{/admin/create}" role="button">Add new user</a>
-      </div>
-    </div>
-
-    <div>
-      <table class="table table-dark table-striped">
-        <thead>
-        <tr>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>EMAIL</th>
-          <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user: ${users}">
-          <td th:text="${user.getFirstName()}"/>
-          <td th:text="${user.getLastName()}"/>
-          <td th:text="${user.getEmail()}"/>
-          <td>
-            <a th:href="@{/admin/edit/{id}(id=${user.id})}"
-            class="btn btn-primary">Edit</a>
-
-            <a th:href = "@{/admin/delete/{id}(id=${user.id})}"
-               class = "btn btn-danger">Delete</a>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-
+<div class="container">
+  <div class="row">
+    <h1>User-table</h1>
   </div>
+  <!--    <div>-->
+  <!--      <p>Logged user: <span th:text="${principal.getName()}"></span> </p>-->
+  <!--    </div>-->
+  <div class="row">
+    <div class = "col-lg-3">
+      <a class="btn btn-primary" th:href="@{/admin/create}" role="button">Add new user</a>
+    </div>
+  </div>
+
+  <div>
+    <table class="table table-dark table-striped">
+      <thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Age</th>
+        <th>EMAIL</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="user: ${users}">
+        <td th:text="${user.getFirstName()}"/>
+        <td th:text="${user.getLastName()}"/>
+        <td th:text="${user.getAge()}"/>
+        <td th:text="${user.getEmail()}"/>
+        <td>
+          <a th:href="@{/admin/edit/{id}(id=${user.id})}"
+             class="btn btn-primary">Edit</a>
+
+          <a th:href = "@{/admin/delete/{id}(id=${user.id})}"
+             class = "btn btn-danger">Delete</a>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+</div>
 </body>
 </html>
