--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -72,6 +72,19 @@
             />
           </div>
 
+          <div class="form-group">
+            <label> Roles:
+              <input
+                    type="checkbox"
+                    name="roles"
+                    th:each="role : ${allRoles}"
+                    th:text=" ${role.name} "
+                    th:value="${role.id}"
+                    th:field="*{roles}"
+              />
+            </label>
+          </div>
+
           <div class="box-footer">
             <button type="submit" class="btn btn-primary">
               Submit
