--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class = "col-lg-3">
-        <a class="btn btn-primary" th:href="@{/users}" role="button">Enter the Table!</a>
+        <a class="btn btn-primary" th:href="@{/admin}" role="button">Enter the Table!</a>
     </div>
 </div>
 
