--- a/src/main/resources/templates/show_user.html
+++ b/src/main/resources/templates/show_user.html
@@ -5,36 +5,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- CSS only -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+        crossorigin="anonymous">
   <title>User Details</title>
 </head>
 <body>
 
-<main>
+<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand">User Management System</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{/root}">Home</a>
+        </li>
+      </ul>
+      <a class="navbar-text" th:text="${principal.getName()}"></a>
+      <a role="button" class="btn btn-link" th:href="@{/mylogout}">Logout</a>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <h1 class="text-center">User Info</h1>
+  </div>
+  <br>
   <div>
     <table class="table table-dark table-striped">
       <thead>
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
+        <th>Age</th>
         <th>EMAIL</th>
       </tr>
       </thead>
       <tbody>
-      <tr th:each="user: ${users}">
+      <tr>
         <td th:text="${user.getFirstName()}"/>
         <td th:text="${user.getLastName()}"/>
+        <td th:text="${user.getAge()}"/>
         <td th:text="${user.getEmail()}"/>
       </tr>
       </tbody>
     </table>
   </div>
-</main>
-<footer>
-  <p>Сюда бы я вписал информацию об авторе и ссылки на другие сайты</p>
-</footer>
-<!-- сюда можно подключить jquery <script src="scripts/app.js" defer></script> -->
+</div>
 </body>
 </html>
