--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -3,23 +3,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
         crossorigin="anonymous">
   <title>Users</title>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand">User Management System</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{/root}">Home</a>
+        </li>
+      </ul>
+      <a class="navbar-text" th:text="${principal.getName()}"></a>
+      <a role="button" class="btn btn-link" th:href="@{/mylogout}">Logout</a>
+    </div>
+  </div>
+</nav>
+
 <div class="container">
   <div class="row">
-    <h1>User-table</h1>
+    <h1 class="text-center">User-table</h1>
   </div>
-  <!--    <div>-->
-  <!--      <p>Logged user: <span th:text="${principal.getName()}"></span> </p>-->
-  <!--    </div>-->
+
   <div class="row">
-    <div class = "col-lg-3">
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
       <a class="btn btn-primary" th:href="@{/admin/create}" role="button">Add new user</a>
     </div>
   </div>
@@ -47,6 +63,9 @@
 
           <a th:href = "@{/admin/delete/{id}(id=${user.id})}"
              class = "btn btn-danger">Delete</a>
+
+          <a th:href = "@{/user/{id}(id=${user.id})}"
+             class = "btn btn-primary">Show</a>
         </td>
       </tr>
       </tbody>
