--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -93,12 +93,13 @@
           <div class="form-group">
             <label> Roles:
               <input
-                    type="checkbox"
-                    name="roles"
-                    th:each="role : ${allRoles}"
-                    th:text=" ${role.name} "
-                    th:value="${role.id}"
-                    th:field="*{roles}"
+                      type="checkbox"
+                      name="roles"
+                      th:each="role : ${allRoles}"
+                      th:text="${role.getName()}"
+                      th:id="${role.getId()}"
+                      th:value="${role.getName()}"
+                      th:field="*{roles}"
               />
             </label>
           </div>
