--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -2,100 +2,194 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-        rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-        crossorigin="anonymous">
-  <title>Users</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+    <title>Users</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-  <div class="container-fluid">
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:text="${principal.getName()}"></a>
-        </li>
-        <li>
-          <a class="nav-link active" aria-current="page">with roles:</a>
-        </li>
-        <li>
-          <a class="nav-link active" aria-current="page" th:text="${currentUser.getRolesToString()}"></a>
-        </li>
-      </ul>
-      <a role="button" class="btn btn-link" th:href="@{/mylogout}">Logout</a>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <span class="navbar-brand"
+              th:text="${principal.getName()} + ' with roles: ' + ${currentUser.getRolesToString()}"></span>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+            </li>
+        </ul>
     </div>
-  </div>
 </nav>
 
-<div class="row">
-  <h1 class="text-center">User-table</h1>
-</div>
-
-<div>
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" th:href="@{/admin}">Users table</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" th:href="@{/admin/create}">New User</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled">Disabled</a>
-    </li>
-  </ul>
-</div>
-
-<div class="container">
-
-
-  <div class="row">
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <a class="btn btn-primary" th:href="@{/admin/create}" role="button">Add new user</a>
+<div class="row g-0">
+    <div class="col-2">
+        <br>
+        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+             aria-orientation="vertical">
+            <button class="nav-link active text-start" id="v-pills-home-tab" data-bs-toggle="pill"
+                    data-bs-target="#admin" type="button" role="tab" aria-controls="v-pills-home"
+                    aria-selected="true">Admin
+            </button>
+            <button class="nav-link text-start" id="v-pills-profile-tab" data-bs-toggle="pill"
+                    data-bs-target="#user" type="button" role="tab" aria-controls="v-pills-profile"
+                    aria-selected="false">User
+            </button>
+        </div>
     </div>
-  </div>
 
-  <div>
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Age</th>
-        <th>Email</th>
-        <th>Role</th>
-        <th>Edit</th>
-        <th>Delete</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="user: ${users}">
-        <td th:text="${user.getId()}"/>
-        <td th:text="${user.getFirstName()}"/>
-        <td th:text="${user.getLastName()}"/>
-        <td th:text="${user.getAge()}"/>
-        <td th:text="${user.getEmail()}"/>
-        <td th:text="${user.getRolesToString()}"/>
-        <td>
-          <a th:href="@{/admin/edit/{id}(id=${user.id})}"
-             class="btn btn-primary">Edit</a>
-        </td>
-        <td>
-          <a th:href = "@{/admin/delete/{id}(id=${user.id})}"
-             class = "btn btn-danger">Delete</a>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+    <div class="col-9 bg-light">
+        <div class="container-fluid p-4">
+            <h1 class="text-start">Admin panel</h1>
+            <div class="nav nav-tabs p-1" id="nav-tab" role="tablist">
+                <button class="nav-link active" id="nav-admin-tab" data-bs-toggle="tab"
+                        data-bs-target="#nav-table"
+                        type="button"
+                        role="tab" aria-controls="nav-table" aria-selected="true">Users table
+                </button>
+                <button class="nav-link" id="nav-new-user-tab" data-bs-toggle="tab"
+                        data-bs-target="#nav-new-user"
+                        type="button"
+                        role="tab" aria-controls="nav-user" aria-selected="false">New User
+                </button>
+            </div>
 
+            <div class="tab-content">
+
+                <div class="tab-pane fade show active" id="nav-table" role="tabpanel"
+                     aria-labelledby="nav-table-tab"
+                     tabindex="0">
+                    <div class="container-fluid bg-light p-2">
+                        <h4>All users</h4>
+                        <div class="container-fluid bg-white">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Age</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="user: ${users}">
+                                    <td th:text="${user.getId()}"/>
+                                    <td th:text="${user.getFirstName()}"/>
+                                    <td th:text="${user.getLastName()}"/>
+                                    <td th:text="${user.getAge()}"/>
+                                    <td th:text="${user.getEmail()}"/>
+                                    <td th:text="${user.getRolesToString()}"/>
+                                    <td>
+                                        <a th:href="@{/admin/edit/{id}(id=${user.id})}"
+                                           class="btn btn-primary">Edit</a>
+                                    </td>
+                                    <td>
+                                        <a th:href="@{/admin/delete/{id}(id=${user.id})}"
+                                           class="btn btn-danger">Delete</a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-pane fade" id="nav-new-user" role="tabpanel" aria-labelledby="nav-profile-tab"
+                     tabindex="0">
+                    <div class="container-fluid p-2"><h4 class="text-start"> Add new user </h4></div>
+                    <div class="row bg-white justify-content-center">
+                        <div class="col-3 p-2">
+
+                            <form class="text-center" th:action="@{/admin}" th:object="${user}" th:method="POST">
+                                <div class="mb-3">
+                                    <label for="firstName" class="form-label"> First Name </label>
+                                    <input
+                                            type="text"
+                                            id="firstName"
+                                            class="form-control"
+                                            th:field="*{firstName}"
+                                            placeholder="Enter First Name"
+                                    />
+                                </div>
+
+                                <div class="mb-3">
+                                    <label> Last Name </label>
+                                    <input
+                                            type="text"
+                                            name="lastName"
+                                            class="form-control"
+                                            th:field="*{lastName}"
+                                            placeholder="Enter Last Name"
+                                    />
+                                </div>
+
+                                <div class="mb-3">
+                                    <label> Age </label>
+                                    <input
+                                            type="number"
+                                            name="age"
+                                            class="form-control"
+                                            th:field="*{age}"
+                                            placeholder="Enter Last Name"
+                                    />
+                                </div>
+
+                                <div class="mb-3">
+                                    <label> Email </label>
+                                    <input
+                                            type="email"
+                                            name="email"
+                                            class="form-control"
+                                            th:field="*{email}"
+                                            placeholder="Enter Email"
+                                    />
+                                </div>
+
+                                <div class="mb-3">
+                                    <label> Password </label>
+                                    <input
+                                            type="text"
+                                            name="password"
+                                            class="form-control"
+                                            th:field="*{password}"
+                                            placeholder="Enter Password"
+                                    />
+                                </div>
+
+                                <div class="mb-3">
+                                    <label> Roles:
+                                        <input
+                                                type="checkbox"
+                                                name="roles"
+                                                th:each="role : ${allRoles}"
+                                                th:text="${role.name}"
+                                                th:value="${role.name}"
+                                                th:field="*{roles}"
+                                        />
+                                    </label>
+                                </div>
+
+                                <button type="submit" class="btn btn-success">
+                                    Add new user
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+</div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 </html>
