--- a/src/main/resources/templates/show_user_admin.html
+++ b/src/main/resources/templates/show_user_admin.html
@@ -28,6 +28,10 @@
 <div class="row g-0">
     <div class="col-2">
         <div class="d-grid gap-2">
+
+            <button class="btn" type="button">
+                <a href="/admin" class="list-group-item  text-start" aria-current="true">Admin</a>
+            </button>
             <button class="btn btn-primary" type="button">
                 <a href="/user" class="list-group-item list-group-item-action active text-start" aria-current="true">User</a>
             </button>
