--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+<noscript>Включите JavaScript!</noscript>
+
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
         <span class="navbar-brand"
@@ -422,7 +424,7 @@
 </div>
 </div>
 </div>
-
+<script th:src="@{/main.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
